--- a/DictUtil/DictUtil.csproj
+++ b/DictUtil/DictUtil.csproj
@@ -36,8 +36,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="DictZip.cs" />
-    <Compile Include="GZip.cs" />
     <Compile Include="DictDB.cs" />
     <Compile Include="Interfaces.cs" />
     <Compile Include="DictIdxTable.cs" />
@@ -46,15 +44,13 @@
     <Compile Include="StarDict\StarDictInfo.cs" />
     <Compile Include="StarDict\StarDict.cs" />
     <Compile Include="DictUtilExt.cs" />
+    <Compile Include="GZip\Crc32.cs" />
+    <Compile Include="GZip\DictZip.cs" />
+    <Compile Include="GZip\GZip.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\..\salgo\salgo\salgo\salgo.csproj">
-      <Project>{5514F9A6-0E73-42FC-A7F1-F8D540E825AB}</Project>
-      <Name>salgo</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <Folder Include="StarDict\" />
+    <Folder Include="GZip\" />
   </ItemGroup>
 </Project>
