add write functionality to gzip & dictzip

--- a/CJK/Cjk.csproj
+++ b/CJK/Cjk.csproj
@@ -63,4 +63,10 @@
     <EmbeddedResource Include="Phonetic\ErData\rime19" />
     <EmbeddedResource Include="Phonetic\ErData\rime106" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\salgo\salgo\salgo.csproj">
+      <Project>{5514F9A6-0E73-42FC-A7F1-F8D540E825AB}</Project>
+      <Name>salgo</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
